--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,7 @@
         <h1>localtunnel</h1>
         <h2>expose yourself to the world</h2>
 
-        <div class="cb-tip-button" data-content-location="https://localtunnel.me" data-href="//www.coinbase.com/tip_buttons/show_tip" data-to-user-id="502a3101c63da50002000157"></div>
+        <div class="cb-tip-button" data-content-location="https://testdrive.cc" data-href="//www.coinbase.com/tip_buttons/show_tip" data-to-user-id="502a3101c63da50002000157"></div>
       </div>
 
       <a href="https://github.com/defunctzombie/localtunnel"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
@@ -60,10 +60,10 @@
 
       <p>Now use the command line app to request a tunnel to your local server.</p>
 
-      <div class="highlight"><pre><span class="nv">$ </span>lt --port 8000
-your url is: https://gqgh.localtunnel.me</pre></div>
+      <div class="highlight"><pre><span class="nv">$ </span>lt --host "http://testdrive.cc" --port 8000
+your url is: https://gqgh.testdrive.cc</pre></div>
 
-      <p>You can now share <em>https://gqgh.localtunnel.me</em> with anyone. As long as your local instance of <strong>lt</strong> is running, this url will remain active. Any requests to that url will be routed to your service on port 8000.</p>
+      <p>You can now share <em>https://gqgh.testdrive.cc</em> with anyone. As long as your local instance of <strong>lt</strong> is running, this url will remain active. Any requests to that url will be routed to your service on port 8000.</p>
 
       <h2>other cool stuff</h2>
       <h3><i class="fa fa-lock"></i> Secure https for all tunnels</h3>
