--- a/views/index.html
+++ b/views/index.html
@@ -61,7 +61,7 @@
       <p>Now use the command line app to request a tunnel to your local server.</p>
 
       <div class="highlight"><pre><span class="nv">$ </span>lt --host "http://testdrive.cc" --port 8000
-your url is: https://gqgh.testdrive.cc</pre></div>
+your url is: http://gqgh.testdrive.cc</pre></div>
 
       <p>You can now share <em>https://gqgh.testdrive.cc</em> with anyone. As long as your local instance of <strong>lt</strong> is running, this url will remain active. Any requests to that url will be routed to your service on port 8000.</p>
 
